# weebsorter

./: .gitignore  LICENSE  README.md  pyproject.toml  run.bat
anime_tagger/: __init__.py  app.py  face_cluster.py  main.py
anime_tagger/classifiers/: __init__.py  clip_classifier.py  wd_tagger.py
anime_tagger/utils/: __init__.py  file_ops.py  image_utils.py
