[project]
name = "anime-tagger"
version = "0.1.0"
description = "Classify and tag anime images using CLIP and WD-ViT-Tagger-v3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.44.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "onnxruntime-directml>=1.17.0",
    "huggingface-hub>=0.22.0",
    "Pillow>=10.2.0",
    "numpy>=1.26.0",
]

[project.scripts]
anime-tagger = "anime_tagger.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anime_tagger"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
package = true
# CPU-only by default (≈200 MB). For GPU see README.
torch-backend = "cpu"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
